changed env example and readme

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,6 @@
-VUE_APP_TITLE='OPER'
-VUE_APP_APIHOST='http://oper-api.festiware.com'
-VUE_APP_ID=2
-VUE_APP_SECRET=tPqODZFVWToCU3U4hBl1VjStjLWqU8MK6HXbmPMX
-VUE_APP_DOMAIN='http://oper-admin.festiware.com'
+VUE_APP_TITLE='KLIKPAYROLL'
+VUE_APP_APIHOST='https://payroll-api.festiware.com/api/'
+VUE_APP_DOMAIN='https://payroll-api.festiware.com/'
 
 # USER TYPE
 VUE_APP_ROLE_SUPERADMIN = 1
